--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-Flask
-Flask-SQLAlchemy
-w3lib
-pandas
-sqlite3
-timestamp
-requests
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+w3lib==2.1.2
+pandas==2.1.4
+requests==2.31.0
